--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
     </main>
 
 
-    <audio id="audioPlayer" src="/src/audio/Creep.mp3" preload="metadata"></audio>
+    <audio id="audioPlayer" src="./src/audio/Creep.mp3" preload="metadata"></audio>
 
     <div class="footer-player">
         <div class="controls">
