--- a/index.html
+++ b/index.html
@@ -85,14 +85,7 @@
       gap: 10px;
   }
 
-  .volume-slider {
-      width: 100px;
-      height: 5px;
-      -webkit-appearance: none;
-      background-color: #555;
-      border-radius: 2.5px;
-      outline: none;
-  }
+
 
   .volume-slider::-webkit-slider-thumb {
       -webkit-appearance: none;
@@ -165,17 +158,17 @@
             </div>
           </div>
 
-          <div class="cartao-pokedev tipo-agua" id="cartao-psycoder">
+          <div class="cartao-pokedev tipo-bruxa" id="cartao-corujix">
             <div class="cartao-topo">
               <div class="detalhes">
-                <h2 class="nome">Biel</h2>
-                <span>#004</span>
+                <h2 class="nome">Corujix</h2>
+                <span>#007</span>
               </div>
 
-              <span class="tipo">Confuso</span>
+              <span class="tipo">Bruxa/Elemental</span>
 
               <div class="cartao-imagem">
-                <img src="./src/imagens/Biel.png" alt="Biel" />
+                <img src="./src/imagens/Corujix.png" alt="Corujix" />
               </div>
             </div>
 
@@ -183,7 +176,33 @@
               <div class="descricao">
                 <h3>Descrição</h3>
                 <p>
-                  Um cara que curte muito seu Gol Special 2000 e a vibe tranquila de fumar um beck. Sempre relaxado, mas quando a mente está fluindo, ele tem uma habilidade quase mágica de resolver qualquer coisa com facilidade, seja no trânsito ou no dia a dia. Sua alegria vem de pequenas coisas, como o ronco do motor do carro e o prazer de estar no momento presente, sem pressa. Quando a vida aperta, ele só respira fundo, se conecta com a paz interior e, de alguma forma, sempre encontra uma solução.
+                  Ela pode parecer uma garota tranquila, com seu olhar doce e aparência inofensiva, mas não se engane: por trás dessa fachada há uma bruxa com habilidades impressionantes. Seu poder não está em poções ou feitiços tradicionais, mas em algo bem mais moderno e surpreendente: ela consegue abrir o Fortnite a qualquer momento, mesmo enquanto o MP está jogando League of Legends, como se fosse um truque de mágica. Quando a partida do MP está em apuros, ela se concentra, e com um simples gesto, tudo no jogo começa a acontecer ao seu favor. Sua presença no campo de batalha é quase imperceptível, mas não se deixe enganar: seus olhos brilham com uma energia misteriosa. Apesar de sua aparência doce, ela é extremamente perigosa, e aqueles que a subestimam acabam se surpreendendo com a força de sua magia. Com um sorriso sereno, ela pode mudar o rumo de uma partida ou virar o jogo a seu favor. Cuidado: é melhor estar ao lado dela, ou você pode acabar em um lugar bem mais difícil do que o jogo em si.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="cartao-pokedev tipo-divino" id="cartao-natan">
+            <div class="cartao-topo">
+              <div class="detalhes">
+                <h2 class="nome">Natan O Templário</h2>
+                <span>#008</span>
+              </div>
+
+              <span class="tipo">Divino/Celestial</span>
+
+              <div class="cartao-imagem">
+                <img src="./src/imagens/Natan-O-Templario.png" alt="Natan-O-Templario" />
+              </div>
+            </div>
+
+            <div class="cartao-informacoes">
+              <div class="descricao">
+                <h3>Descrição</h3>
+                <p>
+                  Ele é um templário imponente, um verdadeiro guerreiro da fé, cujas armaduras brilham com a luz da justiça e da virtude. Em cada batalha, sua presença é um símbolo de coragem e devoção, e seu espírito inquebrantável é guiado por um único propósito: espalhar as palavras de Deus e a bondade pelo mundo. Sua espada, forjada nas chamas da honra, nunca hesita em defender os inocentes e combater as trevas que ameaçam a paz. Mas não é apenas sua habilidade em combate que o torna lendário – é sua voz, firme e serena, que proclama a verdade divina, convidando todos a seguir o caminho da luz. Onde quer que ele vá, as aldeias florescem, os corações se aquecem e a esperança renasce. Ele é tanto um guerreiro quanto um pregador, carregando o estandarte da fé com orgulho e humildade, e buscando sempre ser um exemplo da bondade divina. Em sua jornada, ele não busca glória pessoal, mas sim a elevação da alma humana, convencido de que a verdadeira vitória está em conduzir os outros para o reino de Deus.
+
+
                 </p>
               </div>
             </div>
@@ -261,6 +280,29 @@
               </div>
             </div>
           </div>
+          <div class="cartao-pokedev tipo-agua" id="cartao-psycoder">
+            <div class="cartao-topo">
+              <div class="detalhes">
+                <h2 class="nome">Biel</h2>
+                <span>#004</span>
+              </div>
+
+              <span class="tipo">Confuso</span>
+
+              <div class="cartao-imagem">
+                <img src="./src/imagens/Biel.png" alt="Biel" />
+              </div>
+            </div>
+
+            <div class="cartao-informacoes">
+              <div class="descricao">
+                <h3>Descrição</h3>
+                <p>
+                  Um cara que curte muito seu Gol Special 2000 e a vibe tranquila de fumar um beck. Sempre relaxado, mas quando a mente está fluindo, ele tem uma habilidade quase mágica de resolver qualquer coisa com facilidade, seja no trânsito ou no dia a dia. Sua alegria vem de pequenas coisas, como o ronco do motor do carro e o prazer de estar no momento presente, sem pressa. Quando a vida aperta, ele só respira fundo, se conecta com a paz interior e, de alguma forma, sempre encontra uma solução.
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
 
         <nav class="listagem">
@@ -289,13 +331,23 @@
               <img src="./src/imagens/braia.png" alt="Braia" />
               <span>Braia</span>
             </li>
+
+            <li class="pokedev" id="corujix">
+              <img src="./src/imagens/Corujix.png" alt="Corujix" />
+              <span>Corujix</span>
+            </li>
+
+            <li class="pokedev" id="natan">
+              <img src="./src/imagens/Natan-O-Templario.png" alt="Natan-O-Templario" />
+              <span>Natan O Templário</span>
+            </li>
           </ul>
         </nav>
       </div>
     </main>
 
 
-    <audio id="audioPlayer" src="./src/audio/Creep.mp3" preload="metadata"></audio>
+    <audio id="audioPlayer" src="/src/audio/Creep.mp3" preload="metadata"></audio>
 
     <div class="footer-player">
         <div class="controls">
