--- a/index.html
+++ b/index.html
@@ -303,6 +303,29 @@
               </div>
             </div>
           </div>
+          <div class="cartao-pokedev tipo-divino" id="cartao-joglis">
+            <div class="cartao-topo">
+              <div class="detalhes">
+                <h2 class="nome">Joglis O Leal</h2>
+                <span>#004</span>
+              </div>
+
+              <span class="tipo">Divino/Celestial</span>
+
+              <div class="cartao-imagem">
+                <img src="./src/imagens/Joglis.png" alt="Joglis" />
+              </div>
+            </div>
+
+            <div class="cartao-informacoes">
+              <div class="descricao">
+                <h3>Descrição</h3>
+                <p>
+                  Ele é o leal braço direito do templário, um viajante incansável cuja dedicação à causa só é superada pelo amor que sente pela esposa, com quem valoriza cada momento de qualidade juntos. Suas jornadas o levam a lugares distantes, onde ele age como mensageiro e executor da justiça divina. Apesar de suas obrigações, ele tem um lado curioso e apaixonado: em seus raros momentos de descanso, mergulha em um mundo de fantasia, assumindo o papel de Imperador de Shurima, onde sua estratégia e liderança brilham tanto quanto na vida real. Um homem de dever e equilíbrio, que encontra força na fé, no amor e na diversão.
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
 
         <nav class="listagem">
@@ -314,6 +337,10 @@
             <li class="pokedev" id="scriptle">
               <img src="./src/imagens/Bina.png" alt="Bina" />
               <span>Bina</span>
+            </li>
+            <li class="pokedev" id="joglis">
+              <img src="./src/imagens/Joglis.png" alt="Joglis" />
+              <span>Joglis</span>
             </li>
             <li class="pokedev" id="codevee">
               <img src="./src/imagens/Big-Z.png" alt="Big-Z" />
@@ -339,7 +366,7 @@
 
             <li class="pokedev" id="natan">
               <img src="./src/imagens/Natan-O-Templario.png" alt="Natan-O-Templario" />
-              <span>Natan O Templário</span>
+              <span>Natan</span>
             </li>
           </ul>
         </nav>
