--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <div class="cartao-topo">
               <div class="detalhes">
                 <h2 class="nome">Big Z</h2>
-                <span>#003</span>
+                <span>#005</span>
               </div>
 
               <span class="tipo">Adormecido</span>
@@ -162,7 +162,7 @@
             <div class="cartao-topo">
               <div class="detalhes">
                 <h2 class="nome">Corujix</h2>
-                <span>#007</span>
+                <span>#009</span>
               </div>
 
               <span class="tipo">Bruxa/Elemental</span>
@@ -186,7 +186,7 @@
             <div class="cartao-topo">
               <div class="detalhes">
                 <h2 class="nome">Natan O Templário</h2>
-                <span>#008</span>
+                <span>#010</span>
               </div>
 
               <span class="tipo">Divino/Celestial</span>
@@ -212,7 +212,7 @@
             <div class="cartao-topo">
               <div class="detalhes">
                 <h2 class="nome">Mp Sinistro</h2>
-                <span>#005</span>
+                <span>#007</span>
               </div>
 
               <span class="tipo">Raivoso/Nego Doce</span>
@@ -237,7 +237,7 @@
             <div class="cartao-topo">
               <div class="detalhes">
                 <h2 class="nome">Bina</h2>
-                <span>#002</span>
+                <span>#003</span>
               </div>
 
               <span class="tipo">Raivoso/Sábio</span>
@@ -261,7 +261,7 @@
             <div class="cartao-topo">
               <div class="detalhes">
                 <h2 class="nome">Braia</h2>
-                <span>#006</span>
+                <span>#008</span>
               </div>
 
               <span class="tipo">Assustado/Desconfiado</span>
@@ -284,7 +284,7 @@
             <div class="cartao-topo">
               <div class="detalhes">
                 <h2 class="nome">Biel</h2>
-                <span>#004</span>
+                <span>#006</span>
               </div>
 
               <span class="tipo">Confuso</span>
@@ -326,6 +326,29 @@
               </div>
             </div>
           </div>
+          <div class="cartao-pokedev tipo-fogo" id="cartao-enzo">
+            <div class="cartao-topo">
+              <div class="detalhes">
+                <h2 class="nome">Enzo Eduardo</h2>
+                <span>#002</span>
+              </div>
+
+              <span class="tipo">Opressor/Malicioso</span>
+
+              <div class="cartao-imagem">
+                <img src="./src/imagens/Enzo.png" alt="Enzo" />
+              </div>
+            </div>
+
+            <div class="cartao-informacoes">
+              <div class="descricao">
+                <h3>Descrição</h3>
+                <p>
+                  Enzo é um jovem que carrega consigo uma aura de poder e controle, sempre demonstrando ser o bastardo imbatível de qualquer situação, um comandante totalmente questionável de toda a parafernália que existe no mundo. Seu comportamento é enérgico e muitas vezes agressivo, sempre em busca de ser o centro das atenções e de moldar o mundo ao seu redor de acordo com sua vontade. Seu jeito cruel de ver a vida se reflete nas suas palavras afiadas e atitudes impiedosas, que raramente deixam espaço para fraquezas ou vulnerabilidades. Persuasivo, Enzo é mestre em manipular as situações e as pessoas ao seu redor, conseguindo facilmente o que deseja através de sua habilidade em controlar os outros. Contudo, por trás de sua fachada imponente e destemida, existe um rapaz carente, alguém que carrega o peso da solidão e da falta de afeto. Ele não tem muitas amizades verdadeiras, mas valoriza intensamente as poucas que conquistou, mesmo que tenha dificuldade em demonstrar isso. No fundo, Enzo busca mais do que o poder, ele anseia por conexão genuína, mas a confiança que ele tem em si mesmo faz com que seja difícil para ele admitir sua vulnerabilidade.
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
 
         <nav class="listagem">
@@ -333,6 +356,10 @@
             <li class="pokedev ativo" id="devchu">
               <img src="./src/imagens/japonegro.png" alt="Japonegro" />
               <span>Japonegro</span>
+            </li>
+            <li class="pokedev" id="enzo">
+              <img src="./src/imagens/Enzo.png" alt="enzo" />
+              <span>Enzo</span>
             </li>
             <li class="pokedev" id="scriptle">
               <img src="./src/imagens/Bina.png" alt="Bina" />
